# non-filers-prediction

./: .gitignore  README.md  api.py  main.py  pyproject.toml
nonfiler/scripts/: data_cleaning.py  feature_engineering.py  feature_selection.py  load_data.py  predict.py  processor.py  train.py
